infrastructure/paperless-ngx/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-app-svc
spec:
  selector:
    app: paperless-ngx
  ports:
    - port: 80
      targetPort: 8000
      name: webui
    - port: 81
      targetPort: 5555
      name: flower
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx-app
spec:
  selector:
    matchLabels:
      app: paperless-ngx
  template:
    metadata:
      labels:
        app: paperless-ngx
    spec:
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              memory: "2Gi"
              cpu: "2"
          volumeMounts:
            - name: paperless-ngx-data
              mountPath: /usr/src/paperless/data
            - name: paperless-ngx-pv
              mountPath: /usr/src/paperless/media
              subPath: paperless/media
            - name: paperless-ngx-pv
              mountPath: /usr/src/paperless/trash
              subPath: paperless/trash
            - name: paperless-ngx-pv
              mountPath: /usr/src/paperless/consume
              subPath: paperless/consume
            - name: paperless-ngx-pv
              mountPath: /usr/src/paperless/export
              subPath: paperless/export
          ports:
            - containerPort: 8000
              name: webui
            - containerPort: 5555
              name: flower
      volumes:
        - name: paperless-ngx-pv
          persistentVolumeClaim:
            claimName: smb-share
        - name: paperless-ngx-data
          emptyDir: {}
