infrastructure/paperless-ngx/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`paperless.k8s.tstuessi.com`) && PathPrefix(`/flower`)
      services:
        - name: paperless-ngx-app-svc
          port: 81
    - kind: Rule
      match: Host(`paperless.k8s.tstuessi.com`)
      services:
        - name: paperless-ngx-app-svc
          port: 80
